# dbost

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  depot.json  docker-bake.hcl  docker-compose.yml  justfile  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml
ci/: index.mts  runtime.mts  sccache.mts
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/axum-healthcheck/: Cargo.toml
crates/axum-healthcheck/src/: lib.rs
crates/shuttle-sea-orm/src/: lib.rs
db/entities/: Cargo.toml
db/entities/src/: lib.rs  prelude.rs  season.rs  series.rs  theme_song.rs
db/migrations/: Cargo.toml
db/migrations/src/: lib.rs  m20220101_000001_create_table.rs  m20230730_233755_create_theme_song_entity.rs  m20230801_120415_gen_random_uuid.rs  m20230802_075725_search_indices.rs
domain/entities/: Cargo.toml
domain/entities/src/: lib.rs  prelude.rs  season.rs  series.rs  session.rs  theme_song.rs  user.rs  user_link.rs
domain/migrations/: Cargo.toml
domain/migrations/src/: funcs.rs  lib.rs  m20220101_000001_create_table.rs  m20230730_233755_create_theme_song_entity.rs  m20230801_120415_gen_random_uuid.rs  m20230802_075725_search_indices.rs  m20230807_142613_versioning.rs  m20230811_170956_sessions.rs  m20230813_063316_artwork.rs  m20230813_131452_hot_indices.rs  m20230818_124952_descriptions.rs  prelude.rs  tables.rs  utils.rs
domain/services/: Cargo.toml
domain/services/src/: auth.rs  lib.rs  macros.rs  series.rs
domain/services/src/auth/: github.rs
domain/session/: Cargo.toml
domain/session/src/: lib.rs
domain/utils/: Cargo.toml
domain/utils/src/: lib.rs
infrastructure/: .terraform.lock.hcl  alb.tf  database.tf  ecs.tf  iam.tf  locals.tf  main.tf  network.tf  output.tf  provider.tf  variables.tf  versions.tf
jobs/db-cleanup/: Cargo.toml
jobs/db-cleanup/src/: main.rs
jobs/deploy/: Cargo.toml
jobs/deploy/src/: client.rs  main.rs  revisions.rs  secrets.rs  tasks.rs
jobs/deploy/src/tasks/: builder.rs  definitions.rs
jobs/pre-compress/: Cargo.toml
jobs/pre-compress/src/: encoding.rs  main.rs
jobs/seed/: Cargo.toml
jobs/seed/src/: main.rs
lib/axum-healthcheck/: Cargo.toml
lib/axum-healthcheck/src/: lib.rs
lib/html-template/: Cargo.toml
lib/html-template-macro/: Cargo.toml
lib/html-template-macro/src/: components.rs  lib.rs  templates.rs
lib/html-template-macro/src/components/: parsing.rs  type_resolver.rs
lib/html-template-macro/src/templates/: parsing.rs
lib/html-template-macro/tests/: simple.rs  templates.rs
lib/html-template-macro/tests/compile_fail/: mixed-generics.rs  mixed-generics.stderr
lib/html-template/src/: lib.rs  response.rs
lib/htmx/: Cargo.toml
lib/htmx/src/: extractors.rs  lib.rs  routing.rs
lib/session/: Cargo.toml
lib/session/src/: csrf.rs  lib.rs  store.rs
lib/shuttle-sea-orm/: Cargo.toml
lib/shuttle-sea-orm/src/: lib.rs
lib/tvdb-client/: Cargo.toml
lib/tvdb-client/src/: artworks.rs  auth.rs  lib.rs  series.rs
lib/utils/: Cargo.toml
lib/utils/src/: lib.rs
public/: browserconfig.xml  dbost.webmanifest  manifest.json
src/: api.rs  assets.rs  auth.rs  dev.rs  extractors.rs  main.css  main.rs  main.ts  utils.rs  web.rs
src/api/: series.rs
src/web/: auth.rs  pagination.rs  views.rs
src/web/views/: index.rs  series.rs  template.rs
