[workspace]
members = [
	".",
	"domain/entities",
	"domain/migrations",
	"domain/services",
	"jobs/db-cleanup",
	"jobs/deploy",
	"jobs/pre-compress",
	"jobs/seed",
	"lib/axum-healthcheck",
	"lib/htmx",
	"lib/session",
	"lib/tvdb-client",
	"lib/utils",
]

[package]
name = "dbost"
version = "0.0.0"
edition = "2021"

[dependencies]
async-trait = "0.1.79"
axum = { version = "0.6.20", features = ["http2", "tracing"] }
axum-healthcheck = { version = "0.0.0", path = "./lib/axum-healthcheck" }
built = { version = "0.7.2", default-features = false, features = ["semver"] }
cfg-if = { version = "1.0.0", default-features = false }
dbost-entities = { version = "0.0.0", path = "./domain/entities" }
dbost-htmx = { version = "0.0.0", path = "./lib/htmx" }
dbost-services = { version = "0.0.0", path = "./domain/services" }
dbost-session = { version = "0.0.0", path = "./lib/session" }
dbost-utils = { version = "0.0.0", path = "./lib/utils" }
futures = { version = "0.3.30", default-features = false, features = ["std"] }
futures-util = { version = "0.3.30", default-features = false }
indexmap = { version = "2.1.0", default-features = false, features = ["std"] }
md5 = "0.7.0"
rstml-component = "0.2.1"
rstml-component-axum = "0.2.4"
sea-orm = { version = "0.12.15", default-features = false, features = [
	"debug-print",
	"macros",
	"runtime-tokio-rustls",
	"sqlx-postgres",
	"with-time",
	"with-uuid",
] }
sea-query = { version = "0.30.7", default-features = false, features = [
	"with-time",
	"with-uuid",
	"backend-postgres",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.109", default-features = false, features = [
	"std",
] }
serde_urlencoded = { version = "0.7.1", default-features = false }
static_assertions = "1.1.0"
sysinfo = { version = "0.30.10", default-features = false, optional = true }
thiserror = "1.0.51"
time = { version = "0.3.35", default-features = false, features = ["std"] }
tokio = { version = "1.37.0", features = [
	"macros",
	"rt-multi-thread",
	"signal",
] }
tokio-util = { version = "0.7.10", default-features = false }
tower = { version = "0.4.13", default-features = false }
tower-http = { version = "0.4.4", features = [
	"trace",
	"async-compression",
	"compression-full",
	"auth",
	"fs",
] }
tower-livereload = { version = "0.9.2", optional = true }
tracing = "0.1.37"
tracing-forest = { version = "0.1.6", default-features = false, features = [
	"tokio",
	"uuid",
	"serde",
	"env-filter",
	"ansi",
	"smallvec",
] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
	"std",
] }
tvdb-client = { version = "0.0.0", path = "./lib/tvdb-client" }
url = "2.5.0"
uuid = { version = "1.8.0", features = ["serde"] }

[build-dependencies]
built = { version = "0.7.2", default-features = false, features = ["semver"] }

[features]
default = []
dev = ["tower-livereload", "sysinfo"]

[profile.release]
# disable this for now, building takes forever on GH
lto = false

[dev-dependencies]
pre-commit-hooks = "0.3"

[package.metadata.precommit]
fmt = "cargo fmt"
sort = "cargo sort -w"
check = "cargo clippy --workspace -- -D warnings"
