[package]
name = "theme-db"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.19", features = ["http2", "tracing"] }
axum-healthcheck = { version = "0.0.0", path = "../axum-healthcheck" }
sea-orm = { version = "0.12.1", features = [
	"sqlx-postgres",
	"runtime-tokio-native-tls",
	"with-uuid",
	"macros",
] }
serde = { version = "1.0.178", features = ["derive"] }
shuttle-axum = "0.21.0"
shuttle-runtime = "0.21.0"
shuttle-sea-orm = { version = "0.0.0", path = "../shuttle-sea-orm" }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.4.1", features = ["serde"] }
