[package]
name = "dbost-migration"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = { version = "0.12.12", default-features = false, features = [
	"cli",
	"sqlx-postgres",
	"runtime-tokio-rustls",
	"with-uuid",
	"with-time",
] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
uuid = "1.7.0"
