[package]
name = "dbost-services"
version = "0.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.7.1"
async-trait = { version = "0.1.80", default-features = false }
axum = { version = "0.6.20", default-features = false }
base64 = { version = "0.22.1" }
bincode = { version = "1.3.3", default-features = false }
cookie = { version = "0.17.0", default-features = false }
dbost-entities = { version = "0.0.0", path = "../entities" }
dbost-session = { version = "0.0.0", path = "../../lib/session" }
dbost-utils = { version = "0.0.0", path = "../../lib/utils" }
futures = { version = "0.3.30", default-features = false, features = ["std"] }
http = "0.2.12"
indexmap = "2.1.0"
oauth2 = { version = "4.4.2", default-features = false }
openidconnect = { version = "3.5.0", default-features = false, features = [
	"reqwest",
] }
sea-orm = { version = "0.12.15", default-features = false }
serde = { version = "1.0.200", default-features = false, features = [
	"std",
	"rc",
	"derive",
] }
serde_json = "1.0.109"
thiserror = { version = "1.0.51", default-features = false }
time = "0.3.36"
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
tvdb-client = { version = "0.0.0", path = "../../lib/tvdb-client" }
url = { version = "2.5.0", default-features = false }
uuid = { version = "1.8.0", default-features = false, features = ["v4"] }
