[package]
name = "dbost-session"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", default-features = false }
cookie = { version = "0.17.0", default-features = false, features = [
	"secure",
	"percent-encode",
] }
dbost-entities = { version = "0.0.0", path = "../entities" }
dbost-utils = { version = "0.0.0", path = "../utils" }
futures = { version = "0.3.28", default-features = false, features = ["std"] }
http = "0.2.9"
sea-orm = { version = "0.12.2", default-features = false, features = [
	"with-uuid",
	"with-time",
] }
thiserror = "1.0.44"
time = "0.3.25"
tower-layer = "0.3.2"
tower-service = "0.3.2"
tracing = "0.1.37"
uuid = { version = "1.4.1", default-features = false }
