[package]
name = "dbost-jobs-db-cleanup"
version = "0.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbost-entities = { version = "0.0.0", path = "../../domain/entities" }
dbost-utils = { version = "0.0.0", path = "../../lib/utils" }
sea-orm = { version = "0.12.6", default-features = false, features = [
	"sqlx-postgres",
	"runtime-tokio-rustls",
	"with-uuid",
	"macros",
	"debug-print",
] }
sea-query = { version = "0.30.2", default-features = false, features = [
	"with-time",
	"with-uuid",
	"backend-postgres",
] }
time = { version = "0.3.30", default-features = false, features = ["std"] }
tokio = { version = "1.34.0", features = [
	"macros",
	"rt-multi-thread",
	"signal",
] }
tracing = "0.1.37"
tracing-forest = { version = "0.1.6", default-features = false, features = [
	"tokio",
	"uuid",
	"serde",
	"env-filter",
	"ansi",
	"smallvec",
] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
	"std",
] }
url = "2.4.1"
uuid = { version = "1.6.1", features = ["serde"] }
