[package]
name = "dbost-jobs-deploy"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "0.56.0", default-features = false, features = [
	"rustls",
	"rt-tokio",
] }
aws-sdk-ecs = { version = "0.29.0", default-features = false, features = [
	"rustls",
	"rt-tokio",
] }
clap = { version = "4.3.22", features = ["derive"] }
color-eyre = "0.6.2"
paste = "1.0.14"
tokio = { version = "1.31.0", features = [
	"macros",
	"rt-multi-thread",
	"signal",
] }
