[package]
name = "dbost-jobs-deploy"
version = "0.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "0.56.1", default-features = false, features = [
	"rustls",
	"rt-tokio",
] }
aws-sdk-ecs = { version = "0.34.0", default-features = false, features = [
	"rustls",
	"rt-tokio",
] }
aws-sdk-secretsmanager = { version = "0.34.0", default-features = false, features = [
	"rustls",
	"rt-tokio",
] }
clap = { version = "4.4.11", features = ["derive", "env"] }
color-eyre = "0.6.2"
tokio = { version = "1.35.1", features = [
	"macros",
	"rt-multi-thread",
	"signal",
] }
tracing = "0.1.37"
tracing-forest = { version = "0.1.6", default-features = false, features = [
	"tokio",
	"uuid",
	"serde",
	"env-filter",
	"ansi",
	"smallvec",
] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
	"std",
] }
