[package]
name = "dbost-jobs-precompress"
version = "0.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compression = { version = "0.4.5", default-features = false, features = [
	"tokio",
	"gzip",
	"zlib",
	"brotli",
	"zstd",
] }
bytes = { version = "1.5.0", default-features = false, features = ["std"] }
clap = { version = "4.4.14", features = ["derive", "env"] }
color-eyre = "0.6.2"
futures = { version = "0.3.30", default-features = false, features = ["std"] }
tokio = { version = "1.35.1", features = [
	"macros",
	"rt-multi-thread",
	"signal",
] }
tower-http = { version = "0.4.4", features = [
	"async-compression",
	"compression-full",
	"fs",
] }
tracing = "0.1.37"
tracing-forest = { version = "0.1.6", default-features = false, features = [
	"tokio",
	"uuid",
	"serde",
	"env-filter",
	"ansi",
	"smallvec",
] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
	"std",
] }
walkdir = { version = "2.4.0", default-features = false }
