[package]
name = "dbost-jobs-seed"
version = "0.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbost-entities = { version = "0.0.0", path = "../../domain/entities" }
dbost-services = { version = "0.0.0", path = "../../domain/services" }
dbost-utils = { version = "0.0.0", path = "../../lib/utils" }
futures = { version = "0.3.28", default-features = false, features = ["std"] }
sea-orm = { version = "0.12.2", default-features = false, features = [
	"sqlx-postgres",
	"runtime-tokio-rustls",
	"with-uuid",
	"macros",
	"debug-print",
] }
sea-query = { version = "0.30.1", default-features = false, features = [
	"with-time",
	"with-uuid",
	"backend-postgres",
] }
time = { version = "0.3.27", default-features = false, features = ["std"] }
tokio = { version = "1.32.0", features = [
	"macros",
	"rt-multi-thread",
	"signal",
] }
tokio-util = { version = "0.7.8", default-features = false }
tracing = "0.1.37"
tracing-forest = { version = "0.1.6", default-features = false, features = [
	"tokio",
	"uuid",
	"serde",
	"env-filter",
	"ansi",
	"smallvec",
] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
	"std",
] }
tvdb-client = { version = "0.0.0", path = "../../lib/tvdb-client" }
url = "2.4.0"
uuid = { version = "1.4.1", features = ["serde"] }
