[package]
name = "axum-healthcheck"
version = "0.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["json"] }
indexmap = { version = "2.1.0", features = ["serde"] }
serde = { version = "1.0.192", features = ["derive"] }
