[package]
name = "html-template-macro"
version = "0.0.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
indexmap = "2.0.0"
proc-macro2 = "1"
proc-macro2-diagnostics = "0.10"
quote = "1"
rstml = { version = "0.11", default-features = false }
syn = "2"

[dev-dependencies]
bytes = "1.4.0"
html-template = { path = "../html-template" }
trybuild = "1.0"
