[package]
name = "html-template"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19" }
bytes = "1.4.0"
futures = { version = "0.3.28", default-features = false }
html-template-macro = { version = "0.0.0", path = "../html-template-macro" }
http-body = "0.4.5"
pin-project = "1.1.2"
