[package]
name = "dbost-session"
version = "0.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6.0"
async-trait = { version = "0.1.74", default-features = false }
axum = { version = "0.6.20", default-features = false }
base64 = { version = "0.21.5" }
bincode = { version = "1.3.3", default-features = false }
cookie = { version = "0.17.0", default-features = false, features = [
	"secure",
	"percent-encode",
] }
crypto-common = { version = "0.1.6", features = ["std"] }
dbost-entities = { version = "0.0.0", path = "../../domain/entities" }
dbost-utils = { version = "0.0.0", path = "../utils" }
digest = { version = "0.10.7", features = ["std"] }
futures = { version = "0.3.29", default-features = false, features = ["std"] }
hmac = { version = "0.12.1", features = ["std"] }
http = "0.2.11"
pbkdf2 = "0.12.2"
rand = { version = "0.8.5" }
sea-orm = { version = "0.12.8", default-features = false, features = [
	"with-uuid",
	"with-time",
] }
serde = { version = "1.0.193", default-features = false, features = [
	"derive",
	"std",
] }
sha2 = { version = "0.10.8", features = ["std"] }
thiserror = "1.0.50"
time = "0.3.30"
tower-layer = "0.3.2"
tower-service = "0.3.2"
tracing = "0.1.37"
uuid = { version = "1.6.1", default-features = false }
