[package]
name = "shuttle-sea-orm"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
sea-orm = { version = "0.12.2", features = ["sqlx-postgres"] }
serde = { version = "1.0.148", features = ["derive"] }
shuttle-service = { version = "0.23.0" }
sqlx = { version = "0.7.1", features = ["postgres"] }
