[package]
name = "tvdb-client"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
futures = { version = "0.3.28", default-features = false, features = ["std"] }
itertools = "0.11.0"
reqwest = { version = "0.11.18", default-features = false, features = [
	"gzip",
	"rustls-tls",
] }
reqwest-middleware = "0.2.3"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = { version = "1.0.105", default-features = false, features = [
	"std",
] }
task-local-extensions = "0.1.4"
thiserror = "1.0.44"
tracing = "0.1.37"
