[package]
name = "tvdb-client"
version = "0.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
futures = { version = "0.3.30", default-features = false, features = ["std"] }
itertools = "0.12.1"
reqwest = { version = "0.11.27", default-features = false, features = [
	"gzip",
	"rustls-tls",
] }
reqwest-middleware = "0.2.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.109", default-features = false, features = [
	"std",
] }
task-local-extensions = "0.1.4"
thiserror = "1.0.51"
tracing = "0.1.37"
